started about me, end of class

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -8,28 +8,29 @@
 
 <body>
     <div class="main">
-<div class="navbar">
-    <img class="corner_image" src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
-    <div class="links">
-        <br>
-        <br>
-        <br>
+        <div class="navbar">
+            <img class="corner_image"
+                src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
+            <div class="links">
+                <br>
+                <br>
+                <br>
 
-        <br>
-        <a href="index.html">
-            <p>Home</p>
-        </a>
-        <a href="aboutme.html">
-            <p>About Me</p>
-        </a>
-        <a href="experience.html">
-            <p>Experience</p>
-        </a>
-        <a href="contact.html">
-            <p>Contact Me</p>
-        </a>
-    </div>
-</div>
+                <br>
+                <a href="index.html">
+                    <p>Home</p>
+                </a>
+                <a href="aboutme.html">
+                    <p>About Me</p>
+                </a>
+                <a href="experience.html">
+                    <p>Experience</p>
+                </a>
+                <a href="contact.html">
+                    <p>Contact Me</p>
+                </a>
+            </div>
+        </div>
     </div>
 
 </body>
