--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="main" id="main_index">
         <div class="navbar">
-            <img class="corner_image" src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
+            <img class="corner_image"
+                src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
             <div class="links">
                 <br>
                 <br>
