--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -9,12 +9,12 @@
 <body>
     <div class="main">
         <div class="navbar">
-            <img class="corner_image" src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
+            <img class="corner_image"
+                src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
             <div class="links">
                 <br>
                 <br>
                 <br>
-
                 <br>
                 <a href="index.html">
                     <p>Home</p>
@@ -29,6 +29,22 @@
                     <p>Contact Me</p>
                 </a>
             </div>
+        </div>
+        <div class="space2">
+        </div>
+        <div class="header">
+            <br>
+            <br>
+            <h1>About Me</h1>
+        </div>
+        <div class="space2">
+        </div>
+        <div class="aboutmetext">
+            <p>Hello this is about me jbaofboasnfoi aoifjeoifaoi
+                foaiefj oaifndoifnao fnwjbkbkjbkbkj ufhsdu fhsdfhsuifhsudfhsifudhfksjhkushf</p>
+        </div>
+        <div class="aboutmeimage">
+            img
         </div>
     </div>
 
