--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -9,12 +9,12 @@
 <body>
     <div class="main">
         <div class="navbar">
-            <img class="corner_image" src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
+            <img class="corner_image"
+                src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
             <div class="links">
                 <br>
                 <br>
                 <br>
-
                 <br>
                 <a href="index.html">
                     <p>Home</p>
