Finshed all but contact me page

--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -40,11 +40,27 @@
         <div class="space2">
         </div>
         <div class="aboutmetext">
-            <p>Hello this is about me jbaofboasnfoi aoifjeoifaoi
-                foaiefj oaifndoifnao fnwjbkbkjbkbkj ufhsdu fhsdfhsuifhsudfhsifudhfksjhkushf</p>
+            <p>
+                <br><br><br><br><br><br><br><br><br>
+                Hi, I'm Nate Bowers and I love skiing.
+                Ever since I was put on skis at 2 years old,
+                I have spent countless winters in the mountains shredding.
+                I love to ski with my family, especially my brother,
+                who is always outperforming me and drives me to get better.
+                My main focus is big mountain skiing but I am proficient in both
+                park and racing. My home mountain is Squaw Valley in Tahoe.
+                I have also spent significant time at Alpine Meadows(Tahoe),
+                Deer Valley(Utah), Alta(Utah), and Snowmass(Colorado).
+                <br><br>
+                My ski rolemodel is Chris Benchetler. He is an amazing backcountry skier and artist.
+                He has his own line of big mountain skis and I regularly use them.
+                Chris can be found driving all over the USA in his custom sprinter van and skiing any chance he gets.
+            </p>
+
         </div>
         <div class="aboutmeimage">
-            img
+            <img id="aboutmeimg"
+                src="https://cms.coppercolorado.com/sites/copper/files/2020-04/Copper%20Mountain%20Mobile%20Background%20-%20Lumberjack_0.jpg">
         </div>
     </div>
 
