--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <div class="main">
-        <div class="navbar">
+    <div class="main contactmain">
+        <div class="navbar contactnav">
             <img class="corner_image"
                 src="https://i.pinimg.com/originals/a8/a0/de/a8a0de5b8079e0a9000a851221318d5f.png">
             <div class="links">
@@ -29,6 +29,18 @@
                 <a href="contact.html">
                     <p>Contact Me</p>
                 </a>
+            </div>
+        </div>
+        <div class="col2">
+            <div class="space2">
+            </div>
+            <div class="header">
+                <br>
+                <br>
+                <h1>Contact Me</h1>
+            </div>
+            <div class="Contacttext">
+
             </div>
         </div>
     </div>
