--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
                 <br>
 
                 <br>
-                <a href:="index.html">
+                <a href="index.html">
                     <p>Home</p>
                 </a>
                 <a href="aboutme.html">
