Finished contact page and i think im done

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -32,15 +32,24 @@
             </div>
         </div>
         <div class="col2">
-            <div class="space2">
-            </div>
-            <div class="header">
-                <br>
-                <br>
-                <h1>Contact Me</h1>
-            </div>
-            <div class="Contacttext">
-
+            <div class="contactbody">
+                <div class="space2">
+                </div>
+                <div class="header contactheader">
+                    <br>
+                    <br>
+                    <h1>Contact Me</h1>
+                    <div class="contacttext">
+                        <br><br>
+                    <h3 id="email">Email: natebowers05@gmail.com</h3>
+                    <br><br><br>
+                    <img id="ig" src="https://www.freepnglogos.com/uploads/logo-ig-png/logo-ig-stunning-instagram-logo-vector-download-for-new-7.png">
+                    <h3>natebowerss</h3>
+                    
+                </div>
+                </div>
+                
+                <iframe id="frame" src="https://www.palisadestahoe.com/mountain-information/webcams" title="Webcams at Squaw Valley"></iframe>
             </div>
         </div>
     </div>
